<resources>
    <string name="app_name">Book List</string>
    <string name="title_activity_book_list">BookList</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="no_internet">Internet not found</string>
    <string name="empty_text">No books found</string>
    <string name="search">Search</string>
    <string name="bookdrobe">BookDrobe</string>
    <string name="first_para">This app is designed for helping book lovers to find the books of their favorite genre or Author.</string>
    <string name="second_para">Search for your favorite keyword or author and go through the description to find your favorite read.</string>
    <string name="published_on">Published on: </string>
    <string name="description">Description:</string>
    <string name="page_count">Page Count:</string>
    <string name="genre">Genre:</string>
    <string name="No_books">No books found</string>
</resources>