<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2EFE4"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="37dp"
        android:padding="4dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/first_para"
        android:textColor="#34363F"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:layout_marginEnd="37dp"
        android:padding="4dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/second_para"
        android:textColor="#34363F"
        android:textSize="13sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/searchIcon"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="270dp"
        android:layout_marginTop="680dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_searchicon" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="340dp"
        android:layout_height="253dp"
        android:layout_marginTop="370dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_group_11" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="320dp"
        android:layout_height="64dp"
        android:layout_marginTop="110dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/bookdrobe"
        android:textColor="#2B2A5C"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <soup.neumorphism.NeumorphCardView
        android:layout_width="370dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        style="@style/Widget.Neumorph.CardView"
        app:neumorph_backgroundColor="@color/background_color"
        app:neumorph_shadowColorLight="@color/solid_light_color"
        app:neumorph_shadowColorDark="@color/solid_dark_color"
        app:neumorph_shapeType="pressed"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <EditText
            android:id="@+id/query"
            android:layout_width="320dp"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:background="@drawable/no_background"
            android:hint="@string/search"
            android:textColorHint="#2B2A5C"
            android:imeOptions="actionSearch"
            android:inputType="text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_circle_search_button" />
    </soup.neumorphism.NeumorphCardView>

    <soup.neumorphism.NeumorphFloatingActionButton
        style="@style/Widget.Neumorph.FloatingActionButton"
        android:id="@+id/search"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="270dp"
        android:layout_marginTop="655dp"
        android:background="@drawable/ic_circle_search_button"
        app:neumorph_lightSource="leftTop"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </soup.neumorphism.NeumorphFloatingActionButton>


</androidx.constraintlayout.widget.ConstraintLayout>