<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#F2EFE4"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        tools:context=".Description">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                app:layout_constraintLeft_toLeftOf="@id/cl"
                app:layout_constraintRight_toRightOf="@id/cl"
                app:layout_constraintTop_toTopOf="@id/cl">

                <ImageView
                    android:id="@+id/thumbnail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:paddingEnd="14dp"
                    app:layout_constraintBottom_toBottomOf="@id/cl"
                    app:layout_constraintRight_toLeftOf="@id/ll"
                    app:layout_constraintStart_toStartOf="@id/cl"
                    app:layout_constraintTop_toTopOf="@id/cl"
                    tools:srcCompat="@tools:sample/avatars" />

                <LinearLayout
                    android:id="@+id/ll"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="@id/cl"
                    app:layout_constraintLeft_toRightOf="@id/thumbnail"
                    app:layout_constraintRight_toRightOf="@id/cl"
                    app:layout_constraintTop_toTopOf="@id/cl">

                    <TextView
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:ellipsize="end"
                        android:textColor="@color/textColorAuthors"
                        android:textSize="37sp"
                        android:textStyle="bold"
                        tools:text="Naruto 1" />

                    <TextView
                        android:id="@+id/authors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="left"
                        android:layout_marginTop="6dp"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-medium"
                        android:maxLines="2"
                        android:textColor="@color/textColorBookTitle"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        tools:text="Masashi Kishimoto, Jo Duffy" />

                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            app:layout_constraintTop_toBottomOf="@id/cl"
            app:layout_constraintLeft_toLeftOf="@id/cl"
            app:layout_constraintRight_toRightOf="@id/cl"
            android:id="@+id/subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_light"
            android:textColor="#2B3D4D"
            android:textSize="17sp"
            android:textStyle="italic"
            tools:text="&quot;The Tests of the Ninja&quot;" />

        <TextView
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="27dp"
            android:text="@string/published_on"
            android:textColor="#7CA1C5"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/yearValue"
            app:layout_constraintTop_toBottomOf="@id/subtitle" />

        <TextView
            android:id="@+id/yearValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="27dp"
            android:textColor="#7CA1C5"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@id/year"
            app:layout_constraintTop_toBottomOf="@id/subtitle"
            tools:text="1960" />

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_light"
            android:text="@string/description"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/cl"
            app:layout_constraintTop_toBottomOf="@id/year" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_light"
            android:textColor="#45637E"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="@id/cl"
            app:layout_constraintTop_toBottomOf="@id/header"
            tools:text="In the village of Konohagakure, school is literally a battlefield where classmates are ninjas in training competing to become the greatest ninja in the land." />

        <TextView
            android:id="@+id/pageCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_light"
            android:text="@string/page_count"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/cl"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <TextView
            android:id="@+id/pgValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="27dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/textColorBookTitle"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/pageCount"
            app:layout_constraintTop_toBottomOf="@id/description"
            tools:text="192" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="27dp"
            android:layout_marginBottom="10dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_light"
            android:text="@string/genre"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@id/cl"
            app:layout_constraintTop_toBottomOf="@id/pageCount" />

        <TextView
            android:id="@+id/genValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="27dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppins_light"
            android:textColor="@color/textColorBookTitle"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@id/genre"
            app:layout_constraintTop_toBottomOf="@id/pgValue"
            tools:text="Comics &amp; Graphic Novels" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>